tests/baselines/reference/collisionExportsRequireAndVar.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
collisionExportsRequireAndVar_externalmodule.ts(3,5): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
collisionExportsRequireAndVar_externalmodule.ts(4,5): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== collisionExportsRequireAndVar_externalmodule.ts (2 errors) ====
    export function foo() {
    }
    var exports = 1;
        ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
    var require = "require";
        ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
    namespace m1 {
        var exports = 0;
        var require = "require";
    }
    namespace m2 {
        export var exports = 0;
        export var require = "require";
    }
    
==== collisionExportsRequireAndVar_globalFile.ts (0 errors) ====
    var exports = 0;
    var require = "require";
    namespace m3 {
        var exports = 0;
        var require = "require";
    }
    namespace m4 {
        export var exports = 0;
        export var require = "require";
    }